# sotf-dedicated-game-server-docker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yaml
tests/: conftest.py  constants.py  test_config_creator.py  test_container_run.py  test_image_build.py
