[tool.poetry]
name = "sotf-dedicated-game-server-docker"
version = "0.1.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>", "ChsRmb <chsrmb@chsrmb.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
click = "8.1.8"
python-on-whales = "0.75.1"
steam = {git = "https://github.com/detiam/steam_websocket.git", branch = "master", extras=["client"]}

[tool.poetry.group.dev.dependencies]
bcrypt = "4.2.1"
furl = "2.1.3"
pytest = "8.3.4"
pytest-cov = "6.0.0"
pre-commit = "4.1.0"
ruff = "0.9.2"
testcontainers = "4.9.0"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
